--- a/src/Books.html
+++ b/src/Books.html
@@ -1,11 +1,63 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Books | Library Management System</title>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../bootstrap-5.3.8-dist/css/bootstrap.min.css">
 </head>
+
 <body>
-    <h1>Books</h1>
+
+    <header class="bg-light py-5 text-center">
+        <h1 class="fw-bold">Our Book Collection</h1>
+        <p class="text-muted">Explore knowledge through our library books</p>
+    </header>
+
+    <main class="container py-5">
+        <div class="row g-4" id="booksRow"></div>
+    </main>
+
+    <footer class="bg-dark text-white text-center py-3">
+        <p class="mb-0">© 2025 My Library</p>
+    </footer>
+
+    <script>
+        $(document).ready(function () {
+            $.ajax({
+                type: "GET",
+                url: "data.xml",
+                dataType: "xml",
+                success: function (xml) {
+                    $(xml).find("book").each(function () {
+                        let id = $(this).attr("id");
+                        let title = $(this).find("title").text();
+                        let details = $(this).find("details").text();
+                        let img = $(this).find("image").text();
+
+                        let card = `
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card h-100 shadow-sm border-0">
+                <img src="${img}" class="card-img-top" alt="${title}">
+                <div class="card-body d-flex flex-column">
+                  <h5 class="card-title">${title}</h5>
+                  <p class="text-muted small">${details}</p>
+                  <a href="book-details.html?id=${id}" class="btn btn-primary mt-auto">View Details</a>
+                </div>
+              </div>
+            </div>`;
+                        $("#booksRow").append(card);
+                    });
+                },
+                error: function () {
+                    $("#booksRow").html(`<div class="col-12"><div class="alert alert-danger">Failed to load books.</div></div>`);
+                }
+            });
+        });
+    </script>
 </body>
+
 </html>
