--- a/src/book-details.html
+++ b/src/book-details.html
@@ -5,24 +5,100 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Book Details | Library Management System</title>
+    <link rel="stylesheet" href="../bootstrap-5.3.8-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../public/StyleSheet/style.css">
+    <style>
+        .book-title {
+            font-size: 2rem;
+            font-weight: 700;
+        }
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        .book-info p {
+            margin-bottom: 0.5rem;
+        }
+
+        .book-image {
+            max-width: 100%;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="../public/index.html">My Library</a>
-        </div>
-    </nav>
+    <div class="container">
+        <nav class="navbar no-border bg-transparent navbar-expand-lg py-2">
+            <div class="container-fluid">
+                <a href="../public/index.html" class="navbar-brand fw-bold fs-4">Books Lib<span
+                        class="text-warning">.</span></a>
 
-    <main class="container py-5">
-        <div class="row g-4" id="details"></div>
-    </main>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-    <footer class="bg-dark text-white text-center py-3">
-        <p class="mb-0">© 2025 My Library</p>
-    </footer>
+                <div class="collapse navbar-collapse" id="navbarContent">
+                    <form class="d-flex mx-auto my-2 my-lg-0 w-50">
+                        <div id="rounded" class="search-box border d-flex align-items-center w-100 px-3">
+                            <input class="form-control no-border bg-transparent" type="search"
+                                placeholder="Search your books" />
+                            <i class="fa-solid fa-magnifying-glass text-muted"></i>
+                        </div>
+                    </form>
+
+                    <ul class="navbar-nav ms-auto align-items-center gap-3">
+                        <li class="nav-item">
+                            <a class="nav-link position-relative fw-medium" href="#">
+                                New Release<sup class="text-warning fs-3 fw-bolder">.</sup>
+                                <span class="badge-dot"></span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fw-medium" href="#">Featured</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <main class="container  py-5">
+            <div class="row g-5 align-items-start">
+                <div class="col-md-5">
+                    <img src="https://covers.openlibrary.org/b/id/8371951-L.jpg" alt="Ancient Journey of Library"
+                        class="book-image">
+                </div>
+                <div class="col-md-7 book-info">
+                    <h1 class="book-title">Ancient Journey of Library</h1>
+                    <p><strong>Author:</strong> Sana Iyer</p>
+                    <p><strong>Type:</strong> Poetry</p>
+                    <p><strong>Book Info:</strong></p>
+                    <ul>
+                        <li>289 Pages</li>
+                        <li>Chapter 9</li>
+                        <li>Last Read</li>
+                    </ul>
+                    <a href="books.html" class="btn btn-outline-secondary mt-3">Back to Books</a>
+                </div>
+            </div>
+        </main>
+
+
+        <main class="container py-5">
+            <div class="row g-4" id="details"></div>
+        </main>
+
+        <main class="container py-5">
+            <div class="row g-4" id="booksRow"></div>
+        </main>
+
+
+
+        <footer class="bg-dark text-white text-center py-3">
+            <p class="mb-0">© 2025 My Library</p>
+        </footer>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script>
@@ -52,7 +128,7 @@
 
                             let html = `
               <div class="col-md-5">
-                <img src="${img}" class="img-fluid rounded shadow" alt="${title}">
+                <img  src="${img}" class="img-fluid rounded shadow" alt="${title}">
               </div>
               <div class="col-md-7">
                 <h2 class="fw-bold">${title}</h2>
@@ -70,6 +146,41 @@
                 },
                 error: function () {
                     $("#details").html(`<div class="alert alert-danger">Failed to load book details.</div>`);
+                }
+            });
+        });
+    </script>
+
+
+    <script>
+        $(document).ready(function () {
+            $.ajax({
+                type: "GET",
+                url: "data.xml",
+                dataType: "xml",
+                success: function (xml) {
+                    $(xml).find("book").each(function () {
+                        let id = $(this).attr("id");
+                        let title = $(this).find("title").text();
+                        let details = $(this).find("details").text();
+                        let img = $(this).find("image").text();
+
+                        let card = `
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card h-100 shadow-sm border-0">
+                <img onclick="window.location.href = './book-details.html?id=${id}'" src="${img}" class="card-img-top" alt="${title}">
+                <div class="card-body d-flex flex-column">
+                  <h5 class="card-title">${title}</h5>
+                  <p class="text-muted small">${details}</p>
+                  <a href="book-details.html?id=${id}" class="btn btn-primary mt-auto">View Details</a>
+                </div>
+              </div>
+            </div>`;
+                        $("#booksRow").append(card);
+                    });
+                },
+                error: function () {
+                    $("#booksRow").html(`<div class="col-12"><div class="alert alert-danger">Failed to load books.</div></div>`);
                 }
             });
         });
