Fetch books from XML using jQuery and display in Swiper with 3 slides per view & dynamic pagination

--- a/public/index.html
+++ b/public/index.html
@@ -191,13 +191,14 @@
 
                                     <ul class="navbar-nav ms-auto align-items-center gap-3">
                                         <li class="nav-item">
-                                            <a class="nav-link position-relative fw-medium" href="#">
+                                            <a class="nav-link position-relative fw-medium"
+                                                href="../src/book-details.html?id=4">
                                                 New Release<sup class="text-warning fs-3 fw-bolder">.</sup>
                                                 <span class="badge-dot"></span>
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link fw-medium" href="#">Featured</a>
+                                            <a class="nav-link fw-medium" href="#bom">Featured</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="#"><i
@@ -250,7 +251,7 @@
                         </div>
 
 
-                        <div class="swiper container mySwiper">
+                        <div id="bom" class="swiper container mySwiper">
                             <h5 class="fw-bold mb-3">Books Collections</h5>
                             <div class="swiper-wrapper" id="booksWrapper">
                             </div>
@@ -303,7 +304,7 @@
                                 </div>
                             </div>
 
-                            <button class="btn btn-success btn-lg mt-4">See The list</button>
+                            <button onclick="window.location.href = '../src/Books.html'" class="btn btn-success btn-lg mt-4">See The list</button>
                             <br><br>
                             <br><br>
                         </div>
