--- a/src/Contact.html
+++ b/src/Contact.html
@@ -29,20 +29,20 @@
                     </div>
                 </form>
 
-                <ul class="navbar-nav ms-auto align-items-center gap-3">
-                    <li class="nav-item">
-                        <a class="nav-link position-relative fw-medium" href="#">
-                            New Release<sup class="text-warning fs-3 fw-bolder">.</sup>
-                            <span class="badge-dot"></span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-medium" href="#">Featured</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
-                    </li>
-                </ul>
+          <ul class="navbar-nav ms-auto align-items-center gap-3">
+                        <li class="nav-item">
+                            <a class="nav-link position-relative fw-medium" href="../src/book-details.html?id=4">
+                                New Release<sup class="text-warning fs-3 fw-bolder">.</sup>
+                                <span class="badge-dot"></span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fw-medium" href="../public/index.html#bob">Featured</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+                        </li>
+                    </ul>
             </div>
         </div>
     </nav>
@@ -78,7 +78,7 @@
                                     placeholder="Write your message..."></textarea>
                             </div>
                             <div class="d-grid">
-                                <button type="submit" class="btn btn-primary">SEND</button>
+                                <button type="submit" class="btn btn-success">SEND</button>
                             </div>
                         </form>
                     </div>
