--- a/src/about.html
+++ b/src/about.html
@@ -29,15 +29,15 @@
                         </div>
                     </form>
 
-                    <ul class="navbar-nav ms-auto align-items-center gap-3">
+                <ul class="navbar-nav ms-auto align-items-center gap-3">
                         <li class="nav-item">
-                            <a class="nav-link position-relative fw-medium" href="#">
+                            <a class="nav-link position-relative fw-medium" href="../src/book-details.html?id=4">
                                 New Release<sup class="text-warning fs-3 fw-bolder">.</sup>
                                 <span class="badge-dot"></span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fw-medium" href="#">Featured</a>
+                            <a class="nav-link fw-medium" href="../public/index.html#bob">Featured</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
