--- a/src/Books.html
+++ b/src/Books.html
@@ -34,13 +34,13 @@
 
                     <ul class="navbar-nav ms-auto align-items-center gap-3">
                         <li class="nav-item">
-                            <a class="nav-link position-relative fw-medium" href="#">
+                            <a class="nav-link position-relative fw-medium" href="../src/book-details.html?id=4">
                                 New Release<sup class="text-warning fs-3 fw-bolder">.</sup>
                                 <span class="badge-dot"></span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fw-medium" href="#">Featured</a>
+                            <a class="nav-link fw-medium" href="../public/index.html#bob">Featured</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
@@ -57,7 +57,7 @@
 
         <div>
             <br>
-            <button id="hideClick" onclick="redirectToBooks()" class=" btn btn-primary btn-lg">Show Books</button>
+            <button id="hideClick" onclick="redirectToBooks()" class=" btn btn-success btn-lg">Show Books</button>
             <br>
             <br>
         </div>
@@ -108,7 +108,6 @@
 
     <script>
 
-        // Function definition
         function redirectToBooks() {
             let hd = document.getElementById('hideClick');
             hd.style.display = "none";
